--- a/writedown/zm/paper.water/main.tex
+++ b/writedown/zm/paper.water/main.tex
@@ -42,9 +42,9 @@
 
 \section{Introduction}
 
-A very short overview of the existing electrostatic interaction methods.
-Long-range treatment, Ewald and derived methods like SPME.
-Short-range treatment.
+A very short overview of the existing electrostatic interaction methods. Two classes in general:
+Long-range treatment, e.g.~Ewald and derived methods like SPME.
+Short-range treatment, like RF and ZM.
 
 The importance of developing a short-range method for the electrostatic interaction.
 
@@ -58,77 +58,88 @@ The structure of the paper.
 
 Introduction of the ZM method, formula...
 
-A short mention of the group cut-off v.s.~the atom cut-off method. (will discuss the implementation in gromacs later)
+\recheck{If we want to discuss the issue of cut-off method, a short
+  introduction of the group cut-off v.s.~the atom cut-off
+  method. (will discuss the implementation in gromacs later)}
 
 
 
 \section{Benchmark quantities}
 
 In order to investigate the performance of ZM method, we simulation
-the water system by using both SPME and ZM method, and calculate a set
+the water system by using both SPME and ZM methods, and calculate a set
 of \emph{benchmark quantities}.  This set covers a broad range of
-water properties that are of general interest, and includes the
+water properties that are of general interest. It includes the
 structure property (radial distribution function), the thermodynamic
 properties (pressure, excess chemical potential, constant
 volume/pressure heat capacity, isothermal compressibility, thermal
 expansion coefficient), dielectric properties (dielectric constant and
-Kirkwood-G factor) and dynamical properties (diffusion coefficient and
-viscosity).  By comparing ZM to SPME, a good consistency in computing
-the benchmark quantities would indicate a good accuracy of the ZM
-method.  Moreover, being aware of the weakness of the ZM method also
-prevents the application the method in wrong applications.  The ZM
-method is also compared to the traditional short-range method: RF.
-The definitions for computing these quantities are provided in details
+Kirkwood-G factor) and dynamical properties (diffusion constant and
+viscosity).
+The definitions and computing methods of these quantities are provided in details
 in Appendix.~\ref{appendix:benchmark}.
+By comparing ZM to SPME, a good consistency in computing
+the benchmark quantities would indicate a good accuracy of the ZM
+method.
+More importantly, the benchmark tests provide knowledge in the
+stituations when the ZM method does not work so well, and help in
+finding the way of tuning the working parameters to achieve higher accuracy.
+The ZM method is also compared to the traditional short-range method: RF.
 
 
 \section{Simulation protocols}
 
-In this work, we investigate the water system modeled by
+In this work, we focus on the water system modeled by
 TIP3P~\cite{jorgensen1983comparison} point-charge water model.
-All simulations were performed by Gromacs~4.6~\cite{hess2008gromacs, pronk2013gromacs} complied by GNU C compiler with single float precision.
+% Other point-charge water models differ in the modeling parameters, and
+The accuracy of ZM method in other water models is out of the scope of the current work.
+However, since the point-charge water models share similar idea, and  only differ
+in the model parameters, it is highly probable that ZM works well with other water models if it works
+well with TIP3P.
+
+All simulations were performed by Gromacs~4.6.5~\cite{hess2008gromacs, pronk2013gromacs} complied by GNU C compiler with single-precision floating point.
 The size of the systems and corresponding number of molecules used for MD simulations are summarized in Tab.~\ref{tab:tmp1}.
 The benchmark quantities were calculated in either  canonical (NVT) or isothermal-isobaric (NPT) ensemble, with equilibrium temperature $T=300$~K.
 In order to simulate at the desired temperature,
-the systems $\systemsb$ and $\systemsbp$ were coupled to either Nose-Hoover~\cite{nose1984molecular,hoover1985canonical} thermostat with time-scale $\tau_T = 1.0$~ps,
+the systems $\systemsb$ and $\systemsbp$ were coupled to Nose-Hoover~\cite{nose1984molecular,hoover1985canonical} thermostat with time-scale $\tau_T = 1.0$~ps,
 while systems $\systemmb$, $\systemmbp$, $\systemla$, $\systemlb$ and $\systemlbp$ were coupled to Langevin thermostat with time-scale $\tau_T = 0.1$~ps.
 In the NPT simulations, the systems were further coupled
 to the Parrinello-Rahman barostat~\cite{parrinello1980crystal,parrinello1981polymorphic} (in Gromacs implementation)
 with time-scale $\tau_P = 0.5$~ps to equilibriate the system at 1~Bar.
-All systems were integrated with leap-frog scheme at the time-step of 0.001~ps.
-For the ZM and SPME methods,
-the neighbor lists were updated every 5 time-steps.
+All systems were integrated with leap-frog scheme at a time-step of 0.001~ps.
+The neighbor lists were updated every 5 time-steps.
 The ``\texttt{group}'' cut-off scheme in Gromacs was used. In order to mimic the atomistic
 cut-off manner, the radius for neighbor list building was set 0.3~nm
 larger than the cut-off radius (the maximum of Coulomb cut-off and the van der Waals cut-off).
 To make sure the van der Waals interactions were cut-off in a smooth way,
 they are modified in a shell of $0.05$~nm width near the cut-off sphere by the Gromacs ``\texttt{shift}'' method.
-The ZM method was implemented in Gromacs with the tabulated electrostatic interaction (Home-made codes for generating the interaction tables).
-The short-range part of SPME method is also smoothed in a shell of $0.05$~nm width  by the Gromacs ``\texttt{pme-switch}'' method.
+The ZM method was implemented in Gromacs with the tabulated electrostatic interaction. A home-made code was used to generate the interaction tables.
+The short-range part of SPME method is smoothed in a shell of $0.05$~nm width  by the Gromacs ``\texttt{pme-switch}'' method.
 The reciprocal space
 grid spacing is set to 0.06~nm, with B-Spline interpolation order of 6.
 These parameters are chosen to be more accurate than the Gromacs default choices (grid spacing 0.12~nm and interpolation order 4).
 The splitting parameter is optimized by the error estimate for the SPME method, which is implemented in Gromacs by tool ``\texttt{g\_pme\_error}''~\cite{wang2010optimizing}.
 The optimized real space and reciprocal space force computing errors were equally distributed as $1.4\times10^{-4}$~kJ/(mol nm).
+Since the magnitude of the forces are of order $10^{2}$~kJ/(mol nm), this force computing precision almost reaches the limit of the single-precision representation of the floating point numbers.
 In the simulations of the RF method, the interactions were cut-off in the group manner,
 so the radius for neighbor list building is set identical to the cut-off radius.
-No cut-off smoothing was applied in the cases of RF simulation.
+No cut-off smoothing of the electrostatic interaction was applied in the cases of RF simulation.
 
 \begin{table}
   \centering
   \caption{A list of systems simulated in this work. We report, from left to right, the number of water
-    molecules in the system (TIP3P model), equilibrium box size, length of equilibriation, length of productive trajectory, the thermostats and the corresponding coupling time-scales.
+    molecules in the system (TIP3P model), equilibrium box size, length of equilibriation, length of productive trajectory.
   }
   \vskip .5cm
-  \begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill}}c rrrrrr}\hline\hline
-    System      & $N$ & $V$ [$\textrm{nm}^3$]  & $T_{eq}$ [ps] & Traj. Length [ps] & Thermostat & $\tau$ [ps]  \\\hline
-    $\systemsbp$         &   2,500        & $4.24^3$              & --           &  6,000        & Nose-Hoover & 1.0\\
-    $\systemsb$          & 2,500          & $4.24^3$              & 3,000        & 27,000        & Nose-Hoover & 1.0 \\\hline
-    $\systemmbp$         &   4,500        & $5.15^3$              & --           &  6,000        & Langevin & 0.1\\
-    $\systemmb$          & 4,500          & $5.15^3$              & 3,000        & 17,000        & Langevin & 0.1\\\hline
-    $\systemla$          &   13,824       & $7.49^3$              & 200          & 1,800         & Langevin & 0.1\\
-    $\systemlbp$         &   13,824       & $7.49^3$              & --           & 10,000        & Langevin & 0.1\\
-    $\systemlb$          &   13,824       & $7.49^3$              & 3,000        & 17,000        & Langevin & 0.1\\
+  \begin{tabular*}{0.5\textwidth}{@{\extracolsep{\fill}}c rrrr}\hline\hline
+    System      & $N$ & $V$ [$\textrm{nm}^3$]  & $T_{\textrm{eq}}$ [ps] & $T_{\textrm{prod}}$ [ps]  \\\hline
+    $\systemsbp$         &   2,500        & $4.24^3$              & --           &  6,000        \\
+    $\systemsb$          & 2,500          & $4.24^3$              & 3,000        & 27,000        \\\hline
+    $\systemmbp$         &   4,500        & $5.15^3$              & --           &  6,000        \\
+    $\systemmb$          & 4,500          & $5.15^3$              & 3,000        & 17,000        \\\hline
+    $\systemla$          &   13,824       & $7.49^3$              & 200          & 1,800         \\
+    $\systemlbp$         &   13,824       & $7.49^3$              & --           & 10,000        \\
+    $\systemlb$          &   13,824       & $7.49^3$              & 3,000        & 17,000        \\
     \hline\hline
   \end{tabular*}
   \label{tab:tmp1}
@@ -137,7 +148,7 @@ No cut-off smoothing was applied in the cases of RF simulation.
 The initial configurations were prepared by in
 the following steps:
 (1) An NPT simulation of system $\systemla$ with SPME
-electrostatic was performed. The equilibrium density (984.1~$\textrm{kg}/\textrm{m}^{-3}$) of the system is calculated
+electrostatic was performed. The equilibrium density (984.1~$\textrm{kg}/\textrm{m}^{3}$) of the system is calculated
 from this simulation.
 (2) Initial configurations that contains 2500, 4500 and
 13824 molecules were generated at the calculated equilibrium
@@ -162,7 +173,9 @@ viscosity are fluctuations. See details in Appendix~\ref{appendix:benchmark}), s
 system does not improve the accuracy of the 
 simulation~\cite{milchev1986fluctuations,ferrenberg1991statistical}.
 The optimal way of measuring these properties
-is to simulate with smaller systems (as far as the finite size effect is negligible) and run longer simulations for longer time-averages.
+is to simulate with smaller systems
+% (as far as the finite size effect is negligible)
+and run longer simulations for longer time-averages.
 The reason of using Nose-Hoover thermostat is that
 it perturbs the dynamics of the system only slightly, while the
 Langevin thermostat is likely to substantially change the dynamics
@@ -197,10 +210,10 @@ the ZM is a promising replacement of the RF method.
 \end{figure}
 
 The equilibrium density of the system was determined by an NPT SPME
-simulation.  In the NVT simulation the SPME electrostatic, computed
+simulation.  Then using this density in the NVT simulation with SPME electrostatic, the
 pressure ($-0.4\pm 1.5$~Bar) is reproducing the target pressure of
-1.0~Bar.  The accuracy of ZM method, can be investigate by checking if
-the NVT pressure is consistent with the target pressure.  In
+1.0~Bar, which means the system is in desired thermodynamic state.  The accuracy of ZM method, can be investigate by checking if
+the NVT pressure is consistent with the target pressure, when the SPME equilibrium density is used.  In
 Fig.~\ref{fig:pres-comp}, the pressure calculated by ZM method of
 order $l=1,2,3$ and 4 are plotted against the cut-off radius.
 All the  simulations are done with system $\systemla$.
@@ -240,8 +253,9 @@ In general, the higher order indicates less significant dependency on the splitt
 In the case of $l=1$, the splitting parameter 0.0 is consistent with  $0.5\,\textrm{nm}^{-1}$, and
 by using higher splitting parameter, the pressure shifts to the higher pressure side.
 For $l=2,3$ and 4, the convergence is not sensitive to $\alpha$ up to  $1.0\,\textrm{nm}^{-1}$.
-More importantly, for all orders,
-the pressure does not converges to the desired value 1~Bar by using $\alpha = 1.5$ or $2.0\,\textrm{nm}^{-1}$.
+More importantly,  by using $\alpha = 1.5$ or $2.0\,\textrm{nm}^{-1}$,
+the pressure does not converges to the desired value 1~Bar. Therefore, the high splitting parameter
+is not suggested in the simulations where the high pressure accuracy is important.
 
 \begin{sidewaystable}
   \centering
@@ -349,7 +363,7 @@ of high accuracy RDF computation, the ZM method of order at least 3 should be us
 \end{figure}
 
 The artificial oscillation can be substantially improved by using larger splitting parameter $\alpha$.
-In Fig.~\ref{fig:rdf-damp} presents the RDF of ZM $l=1$ with splitting parameter from 0.0 to 2.0~$\textrm{nm}^{-1}$.
+Fig.~\ref{fig:rdf-damp} presents the RDF of ZM $l=1$ with splitting parameter from 0.0 to 2.0~$\textrm{nm}^{-1}$.
 A clear trend of better RDF by using larger splitting parameter is observed.
 At $\alpha = 2.0\ \textrm{nm}^{-1}$ the RDF is almost overlapping with the SPME result.
 
@@ -377,8 +391,8 @@ As a measurement of the dipole correlation as a function of molecular distance, 
 is an important quantity of the water system.
 It is well know that the G-factor is system size
 dependent~\cite{vanderSpoel2006origin}, therefore we show the G-factor for
-both  system $\systemlb$ in Fig.~\ref{fig:gkr}~(a) and a smaller system $\systemmb$
-Fig.~\ref{fig:gkr} (b).  In the figures, the statistical uncertainty of
+system $\systemlb$ in Fig.~\ref{fig:gkr}~(a) and a smaller system $\systemmb$
+in Fig.~\ref{fig:gkr} (b).  In the figures, the statistical uncertainty of
 the SPME method is denoted by the red error bars. The statistical uncertainties of the
 other methods are essentially of the same size as the SPME, so they are not presented in the figure for
 clarity.  In the figure, ZM adopts a cut-off radius of 1.2~nm and a splitting parameter $\alpha = 0.00\,\textrm{nm}^{-1}$.
@@ -409,7 +423,7 @@ not obvious for $l\geq 2$.
 
 The cut-off and splitting parameter dependency in calculating the Kirkwood-G factor
 is presented in Fig.~\ref{fig:gkr-conv}  for ZM method of order $l=3$. With out surprising,
-the Kirkwood-G factor converges to the SPME result when using increasing cut-off radius. 
+the Kirkwood-G factor converges to the SPME result when using increasingly large cut-off radius. 
 However, unlike the case of calculating RDF, the accuracy Kirkwood-G factor is not improved
 with increasing splitting parameter. This fact should be noticed in choosing parameters for
 high accuracy calculation of Kirkwood-G factor.
