--- a/writedown/period.noneq.msm/submit.jctc/paper.tex
+++ b/writedown/period.noneq.msm/submit.jctc/paper.tex
@@ -55,11 +55,11 @@
 \author{Han Wang}
 \email{han.wang@fu-berlin.de}
 \affiliation{CAEP Software Center for High Performance Numerical Simulation, Beijing, China}
-\alsoaffiliation{Zuse Institute Berlin, Germany}
+\alsoaffiliation{Zuse Institute Berlin (ZIB), Germany}
 \author{Christof Sch\"utte}
-\email{Christof.Schuette@fu-berlin.de}
+\email{schuette@zib.de}
 \affiliation{Institute for Mathematics, Freie Universit\"at Berlin, Germany}
-\alsoaffiliation{Zuse Institute Berlin, Germany}
+\alsoaffiliation{Zuse Institute Berlin (ZIB), Germany}
 
 
 \begin{document}
@@ -696,7 +696,7 @@ $P$ is observed.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Core Set identification}
+\subsection{Core set identification}
 
 \begin{figure}
   \centering
@@ -1186,7 +1186,7 @@ invariant probability density with respect to potential $V(x,0)$ satisfies $\mym
   \bigg\}
 \end{align}
 
-\subsection{Irreversibility of the periodical symmetrical dynamics}
+\subsection{Irreversibility of the periodic time-symmetric dynamics}
 
 In Eq.~\eqref{eq:dagger-0}, we assume the periodicity of the perturbation $F(x,t) = F(x,t+T)$, and the symmetry of the external perturbation, i.e.~$F(x, -t) = F(x, t)$, we have
 \begin{align}
@@ -1341,7 +1341,7 @@ Therefore, following the same procedure as before we have
 \end{align}
 Thus, when starting with the milestone process in state $j$ at some time $t$ we have to determine the fraction of all trajectories of length at least $T$ that hit core set $C_k$ first of all core sets to estimate $\hat{T}_{jk}$.
 
-\section{The prove of identity $\hat P = \hat T\hat M^{-1}$}
+\section{Prove of the identity $\hat P = \hat T\hat M^{-1}$}
 \label{sec:app-ptm}
 In this section we prove the identity  $\hat P = \hat T\hat M^{-1}$. Starting from the
 result Eq.~\eqref{eq:appb-t},
